Mon Sep 16 09:56:17 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Further extend this unit test with more code

Mon Sep 16 09:37:33 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Extended Embarcadero C++ Builder instructions

        * tests/Compiler_Features_24_Test.cpp:
          Further extend this unit test with more code

Mon Sep 16 06:53:47 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_26_Test.cpp:
          Fixed test macro in case of no C++11 features

Fri Sep 13 10:16:32 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Added recommendation for windows users to use active state
          perl

Fri Sep 13 09:16:44 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_26_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added new C++11 test which tests shared_ptr comparison
          with nullptr

Thu Sep 12 17:57:24 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          With bmake we have some optional environment variables

Thu Sep 12 14:12:37 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_25_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New C++11 is_true/is_false test

Wed Sep 11 18:19:15 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_23_Test.cpp:
          Use std namespace

Wed Sep 11 07:50:50 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/MEM_Addr.h:
        * ace/MEM_Connector.cpp:
        * ace/OS_NS_Thread.cpp:
        * ace/README:
        * ace/Service_Config.cpp:
        * ace/config-android.h:
        * ace/config-hpux-11.00.h:
        * ace/config-kfreebsd.h:
        * ace/config-linux.h:
        * ace/config-macosx.h: